--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,23 @@
 {
-  "name": "Epoxy Calculator",
+  "name": "Epoxy Fuel Mix Calculator",
   "short_name": "EpoxyCalc",
-  "start_url": ".",
+  "id": "/",
+  "description": "Calculate epoxy resin/hardener and 2-stroke fuel:oil mix ratios with ease.",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
+  "orientation": "portrait",
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
   "icons": [
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
     {
       "src": "icon-192.png",
       "sizes": "192x192",
